Finished waves, started caustics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,10 @@ set(QT_BUILD_DIR  "C:/Qt/5.10.1/msvc2017_64")
 set(GLM_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ext/glm)
 include_directories(${GLM_INC_DIR})
 
+#stbi
+set(STBI_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/ext/STB_image)
+include_directories(${STBI_INC_DIR})
+
 
 include_directories(src)
 
